--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,10 @@
   "require": {
     "phergie/phergie-irc-client-react": "~3.1"
   },
+  "require-dev": {
+    "phpunit/phpunit": "~5.3",
+    "squizlabs/php_codesniffer": "~2.6"
+  },
   "autoload": {
     "psr-4": {
       "BitWasp\\ElectrumServer\\": "src/"
